# Hackathon-2-phase-5

./: README.md
hackathon 2 phase 5/: DEPLOY_ON_VERCEL.md  deploy.ps1  fix_environment.ps1  requirements.txt  speckit.constitution  speckit.plan  speckit.specify  speckit.tasks  vercel.json  walkthrough.md.resolved
hackathon 2 phase 5/api/: index.py
hackathon 2 phase 5/backend/: .dockerignore  .env  Dockerfile  check_config.py  list_models.py  main.py  pyproject.toml  reset_db.py  test.db  verify_chatbot.py
hackathon 2 phase 5/backend/app/api/: api.py  deps.py
hackathon 2 phase 5/backend/app/api/v1/endpoints/: auth.py  chat.py  scheduler.py  todos.py
hackathon 2 phase 5/backend/app/core/: ai_config.py  ai_service.py  ai_tools.py  config.py  security.py
hackathon 2 phase 5/backend/app/db/: session.py
hackathon 2 phase 5/backend/app/events/: __init__.py  publisher.py  subscriber.py
hackathon 2 phase 5/backend/app/models/: __init__.py  audit_log.py  todo.py  user.py
hackathon 2 phase 5/backend/app/schemas/: todo.py  token.py  user.py
hackathon 2 phase 5/backend/app/services/: recurring.py  scheduler.py
hackathon 2 phase 5/backend/tests/: conftest.py  test_auth.py  test_todos.py  verify_tools.py
hackathon 2 phase 5/charts/hackathon-app/: Chart.yaml  secrets.template.yaml  values.yaml
hackathon 2 phase 5/dapr/components/: pubsub.yaml  statestore.yaml
hackathon 2 phase 5/frontend/: package-lock.json  package.json
hackathon 2 phase 5/k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  postgres.yaml  redpanda.yaml
(+19 files in other folders)
